# Ryuou

./: LICENSE  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/org/ecnu/mobiledev/ryuou/: ExampleInstrumentedTest.java
app/src/androidTest/java/org/ecnu/ryuou/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: editor.cpp  editor.h  native-lib.cpp  player.cpp  player.h
app/src/main/cpp/android/support/v4/widget/: DrawerLayout.java
app/src/main/java/org/ecnu/mobiledev/ryuou/: MainActivity.java
app/src/main/java/org/ecnu/ryuou/: BaseActivity.java  CodecActivity.java  CommonActivity.java  DevolopActivity.java  MainActivity.java  MainApplication.java  MusicActivity.java  PlayerActivity.java  SetActivity.java  SourceActivity.java  SplashActivity.java  SubtitleActivity.java  aboutActivity.java
app/src/main/java/org/ecnu/ryuou/SubtitleFileReader/: ParseSrt.java  SRT.java
app/src/main/java/org/ecnu/ryuou/adapter/: VideoPagerAdapter.java
app/src/main/java/org/ecnu/ryuou/base/: BasePager.java  ReplaceFragment.java
app/src/main/java/org/ecnu/ryuou/domain/: MediaItem.java
app/src/main/java/org/ecnu/ryuou/editor/: Editor.java  EditorInterface.java  ErrorCode.java
app/src/main/java/org/ecnu/ryuou/menu/: AboutActivity.java  SetActivity.java
app/src/main/java/org/ecnu/ryuou/menu_setting/: CodecActivity.java  CommonActivity.java  (+4 more)
app/src/main/java/pager/: ImagePager.java  MusicPager.java  VideoPager.java
app/src/main/jniLibs/include/libavcodec/: avcodec.h  avdct.h  dv_profile.h
app/src/main/jniLibs/include/libavdevice/: avdevice.h
app/src/main/jniLibs/include/libavfilter/: avfilter.h  buffersink.h
app/src/main/jniLibs/include/libavformat/: avformat.h  avio.h
app/src/main/jniLibs/include/libavutil/: aes.h  avstring.h  camellia.h  cast5.h  channel_layout.h  common.h  des.h  encryption_info.h  eval.h  fifo.h  frame.h  hwcontext_cuda.h  imgutils.h  lfg.h  log.h  mathematics.h  mem.h  opt.h  pixdesc.h  pixfmt.h  rc4.h  ripemd.h  twofish.h
app/src/main/jniLibs/include/libswresample/: swresample.h
app/src/main/jniLibs/include/libswscale/: swscale.h
app/src/main/res/drawable/: btn_exit_selector.xml  btn_pause_start_selector.xml  btn_start_pause_selector.xml  btn_voice_selector.xml  rb_video_text_selector.xml
app/src/main/res/drawable-v24/: rb_music_drawable_selector.xml  rb_video_bofang_selector.xml  rb_video_drawable_selector.xml  rb_vimage_drawable_selector.xml
app/src/main/res/layout/: activity_about.xml  activity_codec.xml  activity_common.xml  activity_devolop.xml  activity_main.xml  activity_music.xml  activity_player.xml  activity_set.xml  activity_splash.xml  activity_subtitle.xml  activity_system_video_player.xml  activity_test.xml  app_bar_test.xml  dialog.xml  fragment_gallery.xml  fragment_home.xml  fragment_long.xml  fragment_slideshow.xml  item_video_pager.xml  media_controller.xml  video_pager.xml
app/src/main/res/menu/: activity_about.xml  menu_ce.xml  menu_main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/org/ecnu/ryuou/: ExampleUnitTest.java
(+37 files in other folders)
